--- a/A0101_NewtonsoftJson/A0101_NewtonsoftJson.csproj
+++ b/A0101_NewtonsoftJson/A0101_NewtonsoftJson.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +52,7 @@
     <Compile Include="Model\DataObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample\DataContractJsonSerializerTest.cs" />
     <Compile Include="Sample\JObjectTest.cs" />
     <Compile Include="Sample\JsonConvertTest.cs" />
     <Compile Include="Sample\JsonSerializerTest.cs" />
