--- a/W1050_Mvc5/W1050_Mvc5.csproj
+++ b/W1050_Mvc5/W1050_Mvc5.csproj
@@ -136,6 +136,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestAsyncController.cs" />
+    <Compile Include="Controllers\TestBundleController.cs" />
     <Compile Include="Controllers\TestChartController.cs" />
     <Compile Include="Controllers\TestGlimpseController.cs" />
     <Compile Include="Controllers\Testi18nController.cs" />
@@ -175,6 +176,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\myTestService.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -214,6 +216,7 @@
     <Content Include="Views\TestMobile\TestPartialView.mobile.cshtml" />
     <Content Include="Views\TestMobile\TestPartialView.tablet.cshtml" />
     <Content Include="Views\Testi18n\Index.cshtml" />
+    <Content Include="Views\TestBundle\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
